# app

./: App.jsx  index.css  main.py  pyproject.toml
db/: database.py  models.py  schemas.py  services.py
src/components/: Chatheader.jsx  MessageBubble.jsx  MessageInput.jsx  MessageList.jsx  Sidebar.jsx
src/data/: chats.js
